# YESKA

DicomRead/: CMakeLists.txt  DICOMReader.cpp  DICOMReader.hpp  main.cpp
